Ticket #14783 (closed defect: fixed)

Opened 7 months ago

Last modified 7 months ago

The doxygen tag @library contains wrong wxlib for a bunch of classes

Reported by: phi Owned by:
Priority: normal Milestone:
Component: documentation Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

Similar to #14747.
The attached patch corrects the wxlib for some more classes.

Attachments

fix_interface_doc2.patch download (3.7 KB) - added by phi 7 months ago.

Change History

Changed 7 months ago by phi

Changed 7 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72786]) Fix incorrect libraries in the documentation.

Use wxcore for the GUI classes that were mistakenly documented as belonging to
the wxbase library.

Closes #14783.

Note: See TracTickets for help on using tickets.