Fix incorrect libraries in the documentation.

Use wxcore for the GUI classes that were mistakenly documented as belonging to
the wxbase library.

Closes #14783.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72786 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775