interface/wx/renderer.h
@@ -77,7 +77,7 @@ enum wxTitleBarButton
     It doesn't have any methods and all of its fields are constant, so they can
     only be examined but not modified.
 
-    @library{wxbase}
+    @library{wxcore}
     @category{gdi}
 */
 struct wxSplitterRenderParams
@@ -111,7 +111,7 @@ struct wxSplitterRenderParams
     wxRendererNative::DrawHeaderButton() to specify custom values used to draw
     the text or bitmap label.
 
-    @library{wxbase}
+    @library{wxcore}
     @category{gdi}
 */
 struct wxHeaderButtonParams
@@ -561,7 +561,7 @@ public:
     renderer which has the age greater or equal to its age. This verification is
     done by IsCompatible() method.
 
-    @library{wxbase}
+    @library{wxcore}
     @category{gdi}
 */
 struct wxRendererVersion
